src/c_tango/c_tango.h


enum TangoDataType {
	DEV_VOID = 0, 					
	DEV_BOOLEAN,					
	DEV_SHORT,						
	DEV_LONG,						
	DEV_FLOAT,						
	DEV_DOUBLE,						
	DEV_USHORT,						
	DEV_ULONG,						
	DEV_STRING,						
	DEVVAR_CHARARRAY,				
	DEVVAR_SHORTARRAY,				
	DEVVAR_LONGARRAY,				
	DEVVAR_FLOATARRAY,				
	DEVVAR_DOUBLEARRAY,				
	DEVVAR_USHORTARRAY,				
	DEVVAR_ULONGARRAY,				
	DEVVAR_STRINGARRAY,				
	DEVVAR_LONGSTRINGARRAY,			
	DEVVAR_DOUBLESTRINGARRAY,		
	DEV_STATE,						
	CONST_DEV_STRING,				
	DEVVAR_BOOLEANARRAY,			
	DEV_UCHAR,						
	DEV_LONG64,						
	DEV_ULONG64,					
	DEVVAR_LONG64ARRAY,				
	DEVVAR_ULONG64ARRAY,			
	DEV_INT,						
	DEV_ENCODED						
};
enum AttrQuality { 
	ATTR_VALID, 	 
	ATTR_INVALID,   
	ATTR_ALARM, 	 
	ATTR_CHANGING,  
	ATTR_WARNING   
};
enum DispLevel { 
	OPERATOR, 	
	EXPERT		
};
enum DevSource { 
	DEV, 					
	CACHE, 			
	CACHE_DEV		
};
typedef enum TangoDataType TangoDataType;
typedef enum AttrQuality AttrQuality;
typedef enum DispLevel DispLevel;
typedef enum DevSource DevSource;
struct VarStringArray {
							unsigned int length;
							char  	  **sequence;
							};
typedef struct VarStringArray VarStringArray;
union TangoAttributeData {
				VarBoolArray   bool_arr;
				VarCharArray	char_arr;
				VarShortArray	short_arr;
				VarUShortArray	ushort_arr;
				VarLongArray	long_arr;
				VarULongArray	ulong_arr;
				VarLong64Array	long64_arr;
				VarULong64Array ulong64_arr;				
				VarFloatArray	float_arr;
				VarDoubleArray double_arr;
				VarStringArray string_arr;
				VarStateArray 	state_arr;
				VarEncodedArray encoded_arr;
      	  };
typedef union TangoAttributeData TangoAttributeData;
union TangoCommandData {
				bool			  		bool_val;
				short					short_val;
				unsigned short			ushort_val;
				int				   		long_val;
				unsigned int 		  	ulong_val;
				float					float_val;
				double					double_val;
				char             		*string_val;
				TangoDevState	 		state_val;
				TangoDevLong64	 		long64_val;
				TangoDevULong64 		ulong64_val;
				VarBoolArray   			bool_arr;
				VarCharArray			char_arr;
				VarShortArray			short_arr;
				VarUShortArray			ushort_arr;
				VarLongArray			long_arr;
				VarULongArray			ulong_arr;
				VarLong64Array			long64_arr;
				VarULong64Array 		ulong64_arr;				
				VarFloatArray			float_arr;
				VarDoubleArray 			double_arr;
				VarStringArray 			string_arr;
				VarStateArray 			state_arr;
				TangoDevEncoded 		encoded_val;
				VarLongStringArray 		long_string_arr;
				VarDoubleStringArray 	double_string_arr;
      	  };
typedef union TangoCommandData TangoCommandData;
union TangoPropertyData {
				bool			  		bool_val;
				unsigned char			char_val;
				short					short_val;
				unsigned short			ushort_val;
				int				   		long_val;
				unsigned int 		  	ulong_val;
				float					float_val;
				double					double_val;
				char             *string_val;
				TangoDevLong64	 long64_val;
				TangoDevULong64 ulong64_val;
				VarShortArray	short_arr;
				VarUShortArray	ushort_arr;
				VarLongArray	long_arr;
				VarULongArray	ulong_arr;
				VarLong64Array	long64_arr;
				VarULong64Array ulong64_arr;				
				VarFloatArray	float_arr;
				VarDoubleArray double_arr;
				VarStringArray string_arr;
      	  };
typedef union TangoPropertyData TangoPropertyData;
struct CommandData {
				TangoDataType		arg_type;		
				TangoCommandData  cmd_data;	
			  };
typedef struct CommandData CommandData;
struct AttributeData {
				TangoDataType 	  data_type;		
				TangoAttributeData attr_data;	
				AttrQuality 		quality;		
				char 				    *name;		 
				int 					dim_x;		 
				int 					dim_y; 		 
				struct timeval 	 time_stamp;  
		  		};
typedef struct AttributeData AttributeData;
struct AttributeDataList	{
				unsigned int 		length;
				AttributeData  *sequence;
				};
typedef struct AttributeDataList AttributeDataList;
struct DevFailed {
				char 				*desc;		
				char 				*reason;		
				char 				*origin;		
				ErrSeverity 	severity;  
				};
typedef struct DevFailed DevFailed;
struct ErrorStack	{
				unsigned int 	length;
				DevFailed  *sequence;
				};
typedef struct ErrorStack ErrorStack;
struct CommandInfo {
				char 			*cmd_name;		
				int 			cmd_tag;			
				int 			in_type;			
				int 			out_type;		
				char 			*in_type_desc;	
				char 			*out_type_desc;
				DispLevel	disp_level;	  
				};
typedef struct CommandInfo CommandInfo;
struct CommandInfoList	{
				unsigned int 		length;
				CommandInfo    *sequence;
				};
typedef struct CommandInfoList CommandInfoList;
struct AttributeInfo {
				char 				*name;				
				AttrWriteType 	writable;		  
				AttrDataFormat data_format;	  
				TangoDataType	data_type;		  
				int 				 max_dim_x;			
				int 				 max_dim_y;			
				char 			   *description;		
				char 				*label;				
				char 				*unit;				
				char 				*standard_unit;	
				char 				*display_unit;		
				char 				*format;				
				char 				*min_value;			
				char 				*max_value;			
				char 				*min_alarm;			
				char 				*max_alarm;			
				char 				*writable_attr_name;	
				DispLevel 		disp_level;			
				};
typedef struct AttributeInfo AttributeInfo;
struct AttributeInfoList {
				unsigned int 		length;
				AttributeInfo *sequence;
				};
typedef struct AttributeInfoList AttributeInfoList;
struct DbDatum {
				char					 *property_name; 	 
				TangoDataType		data_type;				
				TangoPropertyData prop_data;			
				bool 					 is_empty;			
				bool   				 wrong_data_type; 
			  };
typedef struct DbDatum DbDatum;
struct DbData {
				unsigned int 		length;
				DbDatum       	*sequence;
				};
typedef struct DbData DbData;
bool tango_create_device_proxy (char *dev_name, void **proxy, ErrorStack *error);
bool tango_delete_device_proxy (void **proxy, ErrorStack *error);
bool tango_set_timeout_millis  (void *proxy, int millis, ErrorStack *error);
bool tango_get_timeout_millis  (void *proxy, int *millis, ErrorStack *error);
bool tango_set_source          (void *proxy, DevSource source, ErrorStack *error);
bool tango_get_source          (void *proxy, DevSource *source, ErrorStack *error);
bool tango_lock (void *proxy, ErrorStack *error);
bool tango_unlock (void *proxy, ErrorStack *error);
bool tango_is_locked (void *proxy, bool *is_locked, ErrorStack *error);
bool tango_is_locked_by_me (void *proxy, bool *is_locked_by_me, ErrorStack *error);
bool tango_locking_status (void *proxy, char **lock_status, ErrorStack *error);
bool tango_command_query      (void *proxy, char *cmd_name, CommandInfo *cmd_info, ErrorStack *error);
bool tango_command_list_query (void *proxy, CommandInfoList *cmd_info_list, ErrorStack *error);
bool tango_command_inout      (void *proxy, char *cmd_name, CommandData *argin, CommandData *argout, ErrorStack *error);
void tango_free_CommandData   	(CommandData 		*command_data);
void tango_free_CommandInfo   	(CommandInfo 		*command_info);
void tango_free_CommandInfoList	(CommandInfoList 	*command_info_list);
bool tango_get_attribute_list   (void *proxy, VarStringArray *attr_names, ErrorStack *error);
bool tango_get_attribute_config (void *proxy, VarStringArray *attr_names, AttributeInfoList *attr_info_list, ErrorStack *error);
bool tango_attribute_list_query (void *proxy, AttributeInfoList *attr_info_list, ErrorStack *error);
bool tango_read_attribute   (void *proxy, char *attr_name, AttributeData *argout, ErrorStack *error);
bool tango_write_attribute  (void *proxy, AttributeData *argin, ErrorStack *error);
bool tango_read_attributes  (void *proxy, VarStringArray *attr_names, AttributeDataList *argout, ErrorStack *error);
bool tango_write_attributes (void *proxy, AttributeDataList *argin, ErrorStack *error);
void tango_free_AttributeData     (AttributeData 		*attribute_data);
void tango_free_AttributeDataList (AttributeDataList 	*attribute_data_list);
void tango_free_VarStringArray    (VarStringArray     *string_arr);
void tango_free_AttributeInfoList (AttributeInfoList 	*attribute_info_list);
void tango_free_ErrorStack  (ErrorStack *error_stack);
bool tango_create_database_proxy (void **db_proxy, ErrorStack *error);
bool tango_delete_database_proxy (void **db_proxy, ErrorStack *error);
bool tango_get_device_exported   (void *db_proxy, char *name_filter, 
                                 DbDatum *dev_list, ErrorStack *error);
bool tango_get_device_exported_for_class   (void *db_proxy, char *class_name, 
                                    DbDatum *dev_list, ErrorStack *error);
bool tango_get_object_list          (void *db_proxy, char *name_filter, 
                                    DbDatum *obj_list, ErrorStack *error);
bool tango_get_object_property_list (void *db_proxy, char *obj_name, char *name_filter, 
                                    DbDatum *prop_list, ErrorStack *error);
bool tango_get_property  	(void *db_proxy, char *obj_name, DbData *prop_list, ErrorStack *error);
bool tango_put_property  	(void *db_proxy, char *obj_name, DbData *prop_list, ErrorStack *error);
bool tango_delete_property (void *db_proxy, char *obj_name, DbData *prop_list, ErrorStack *error);
bool tango_get_device_property  	 (void *dev_proxy, DbData *prop_list, ErrorStack *error);
bool tango_put_device_property  	 (void *dev_proxy, DbData *prop_list, ErrorStack *error);
bool tango_delete_device_property (void *dev_proxy, DbData *prop_list, ErrorStack *error);
void tango_free_DbDatum   	(DbDatum *db_datum);
void tango_free_DbData   	(DbData  *db_data);