src/c_tango/src/binding.rs

pub type DbData = Struct_Unnamed41;
extern "C" {
    pub fn select(__nfds: ::libc::c_int, __readfds: *mut fd_set,
                  __writefds: *mut fd_set, __exceptfds: *mut fd_set,
                  __timeout: *mut Struct_timeval) -> ::libc::c_int;
    pub fn pselect(__nfds: ::libc::c_int, __readfds: *mut fd_set,
                   __writefds: *mut fd_set, __exceptfds: *mut fd_set,
                   __timeout: *const Struct_timespec,
                   __sigmask: *const __sigset_t) -> ::libc::c_int;
    pub fn gettimeofday(__tv: *mut Struct_timeval, __tz: __timezone_ptr_t)
     -> ::libc::c_int;
    pub fn settimeofday(__tv: *const Struct_timeval,
                        __tz: *const Struct_timezone) -> ::libc::c_int;
    pub fn adjtime(__delta: *const Struct_timeval,
                   __olddelta: *mut Struct_timeval) -> ::libc::c_int;
    pub fn getitimer(__which: __itimer_which_t,
                     __value: *mut Struct_itimerval) -> ::libc::c_int;
    pub fn setitimer(__which: __itimer_which_t,
                     __new: *const Struct_itimerval,
                     __old: *mut Struct_itimerval) -> ::libc::c_int;
    pub fn utimes(__file: *const ::libc::c_char, __tvp: *mut Struct_timeval)
     -> ::libc::c_int;
    pub fn lutimes(__file: *const ::libc::c_char, __tvp: *mut Struct_timeval)
     -> ::libc::c_int;
    pub fn futimes(__fd: ::libc::c_int, __tvp: *mut Struct_timeval)
     -> ::libc::c_int;
    pub fn tango_create_device_proxy(dev_name: *mut ::libc::c_char,
                                     proxy: *mut *mut ::libc::c_void)
     -> *mut ErrorStack;
    pub fn tango_delete_device_proxy(proxy: *mut ::libc::c_void)
     -> *mut ErrorStack;
    pub fn tango_set_timeout_millis(proxy: *mut ::libc::c_void,
                                    millis: ::libc::c_int) -> *mut ErrorStack;
    pub fn tango_get_timeout_millis(proxy: *mut ::libc::c_void,
                                    millis: *mut ::libc::c_int)
     -> *mut ErrorStack;
    pub fn tango_set_source(proxy: *mut ::libc::c_void, source: DevSource)
     -> *mut ErrorStack;
    pub fn tango_get_source(proxy: *mut ::libc::c_void,
                            source: *mut DevSource) -> *mut ErrorStack;
    pub fn tango_lock(proxy: *mut ::libc::c_void) -> *mut ErrorStack;
    pub fn tango_unlock(proxy: *mut ::libc::c_void) -> *mut ErrorStack;
    pub fn tango_is_locked(proxy: *mut ::libc::c_void, is_locked: *mut u8)
     -> *mut ErrorStack;
    pub fn tango_is_locked_by_me(proxy: *mut ::libc::c_void,
                                 is_locked_by_me: *mut u8) -> *mut ErrorStack;
    pub fn tango_locking_status(proxy: *mut ::libc::c_void,
                                lock_status: *mut *mut ::libc::c_char)
     -> *mut ErrorStack;
    pub fn tango_command_query(proxy: *mut ::libc::c_void,
                               cmd_name: *mut ::libc::c_char,
                               cmd_info: *mut CommandInfo) -> *mut ErrorStack;
    pub fn tango_command_list_query(proxy: *mut ::libc::c_void,
                                    cmd_info_list: *mut CommandInfoList)
     -> *mut ErrorStack;
    pub fn tango_command_inout(proxy: *mut ::libc::c_void,
                               cmd_name: *mut ::libc::c_char,
                               argin: *mut CommandData,
                               argout: *mut CommandData) -> *mut ErrorStack;
    pub fn tango_free_CommandData(command_data: *mut CommandData) -> ();
    pub fn tango_free_CommandInfo(command_info: *mut CommandInfo) -> ();
    pub fn tango_free_CommandInfoList(command_info_list: *mut CommandInfoList)
     -> ();
    pub fn tango_get_attribute_list(proxy: *mut ::libc::c_void,
                                    attr_names: *mut VarStringArray)
     -> *mut ErrorStack;
    pub fn tango_get_attribute_config(proxy: *mut ::libc::c_void,
                                      attr_names: *mut VarStringArray,
                                      attr_info_list: *mut AttributeInfoList)
     -> *mut ErrorStack;
    pub fn tango_attribute_list_query(proxy: *mut ::libc::c_void,
                                      attr_info_list: *mut AttributeInfoList)
     -> *mut ErrorStack;
    pub fn tango_read_attribute(proxy: *mut ::libc::c_void,
                                attr_name: *mut ::libc::c_char,
                                argout: *mut AttributeData)
     -> *mut ErrorStack;
    pub fn tango_write_attribute(proxy: *mut ::libc::c_void,
                                 argin: *mut AttributeData)
     -> *mut ErrorStack;
    pub fn tango_read_attributes(proxy: *mut ::libc::c_void,
                                 attr_names: *mut VarStringArray,
                                 argout: *mut AttributeDataList)
     -> *mut ErrorStack;
    pub fn tango_write_attributes(proxy: *mut ::libc::c_void,
                                  argin: *mut AttributeDataList)
     -> *mut ErrorStack;
    pub fn tango_free_AttributeData(attribute_data: *mut AttributeData) -> ();
    pub fn tango_free_AttributeDataList(attribute_data_list:
                                            *mut AttributeDataList) -> ();
    pub fn tango_free_VarStringArray(string_arr: *mut VarStringArray) -> ();
    pub fn tango_free_AttributeInfoList(attribute_info_list:
                                            *mut AttributeInfoList) -> ();
    pub fn tango_free_ErrorStack(error_stack: *mut ErrorStack) -> ();
    pub fn tango_create_database_proxy(db_proxy: *mut *mut ::libc::c_void)
     -> *mut ErrorStack;
    pub fn tango_delete_database_proxy(db_proxy: *mut ::libc::c_void)
     -> *mut ErrorStack;
    pub fn tango_get_device_exported(db_proxy: *mut ::libc::c_void,
                                     name_filter: *mut ::libc::c_char,
                                     dev_list: *mut DbDatum)
     -> *mut ErrorStack;
    pub fn tango_get_device_exported_for_class(db_proxy: *mut ::libc::c_void,
                                               class_name:
                                                   *mut ::libc::c_char,
                                               dev_list: *mut DbDatum)
     -> *mut ErrorStack;
    pub fn tango_get_object_list(db_proxy: *mut ::libc::c_void,
                                 name_filter: *mut ::libc::c_char,
                                 obj_list: *mut DbDatum) -> *mut ErrorStack;
    pub fn tango_get_object_property_list(db_proxy: *mut ::libc::c_void,
                                          obj_name: *mut ::libc::c_char,
                                          name_filter: *mut ::libc::c_char,
                                          prop_list: *mut DbDatum)
     -> *mut ErrorStack;
    pub fn tango_get_property(db_proxy: *mut ::libc::c_void,
                              obj_name: *mut ::libc::c_char,
                              prop_list: *mut DbData) -> *mut ErrorStack;
    pub fn tango_put_property(db_proxy: *mut ::libc::c_void,
                              obj_name: *mut ::libc::c_char,
                              prop_list: *mut DbData) -> *mut ErrorStack;
    pub fn tango_delete_property(db_proxy: *mut ::libc::c_void,
                                 obj_name: *mut ::libc::c_char,
                                 prop_list: *mut DbData) -> *mut ErrorStack;
    pub fn tango_get_device_property(dev_proxy: *mut ::libc::c_void,
                                     prop_list: *mut DbData)
     -> *mut ErrorStack;
    pub fn tango_put_device_property(dev_proxy: *mut ::libc::c_void,
                                     prop_list: *mut DbData)
     -> *mut ErrorStack;
    pub fn tango_delete_device_property(dev_proxy: *mut ::libc::c_void,
                                        prop_list: *mut DbData)
     -> *mut ErrorStack;
    pub fn tango_free_DbDatum(db_datum: *mut DbDatum) -> ();
    pub fn tango_free_DbData(db_data: *mut DbData) -> ();
}
